# anp_document_processing

./: README.md  db.py  ollama_df_raw.json  ollama_parecer_raw.json  pipeline.py  pyproject.toml  requirements.txt  schema.sql  streamlit_app.py
.claude/: launch.json
.devcontainer/: devcontainer.json
