[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.59.1",
    "streamlit>=1.59.1",
    "anthropic>=0.40.0",
    "pdfplumber>=0.11.0",
    "supabase>=2.9.0"
]

[tool.uv]
package = false
